--- a/src/pages/Login/Rejister.css
+++ b/src/pages/Login/Rejister.css
@@ -160,12 +160,13 @@ input[type="submit"] {
     border: none;
     outline: none;
     background: var(--color);
-    padding: 11px 25px;
+    padding: 8px 25px;
     width: 100px;
     margin-top: 10px;
     border-radius: 4px;
     font-weight: 600;
     cursor: pointer;
+    width: 100%;
 }
 
 input[type="submit"]:active {
