--- a/src/pages/Course/Courses/CourseDetail.css
+++ b/src/pages/Course/Courses/CourseDetail.css
@@ -1,3 +1,12 @@
 .course-detail-div {
-    max-width: 540px;
+    max-width: 740px;
+}
+
+.rating-star {
+    color: gold;
+    margin-right: 5px;
+}
+
+.rating {
+    margin-left: 5px;
 }
