--- a/src/pages/Shared/Header/Header.css
+++ b/src/pages/Shared/Header/Header.css
@@ -2,11 +2,113 @@
     border-radius: 50%;
     width: 30px;
     height: 30px;
-    margin-right: 10px;
+}
+
+.site-name {
+    text-decoration: none;
+    color: rgb(65, 63, 63);
+}
+
+.site-name:hover {
+    color: rgb(65, 63, 63);
+}
+
+.n-link {
+    text-decoration: none;
+    color: #2196f3;
+    font-size: 20px;
+}
+
+.n-link:hover {
+    color: rgb(65, 63, 63);
+
 }
 
 .button-signout {
     border: none;
-    padding: 8px;
+    background-color: black;
+}
+
+/*  */
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: black;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
     background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/*  */
+.name-parent {
+    position: relative;
+}
+
+.name-p {
+    position: absolute;
+    top: 25px;
+    left: -20px;
+    font-size: large;
+    color: white;
+    padding: 5px 10px;
+    border-radius: 5px;
+    background-color: black;
+    visibility: hidden;
+    word-wrap: none;
+}
+
+.name-parent:hover .name-p {
+    visibility: visible;
 }
